--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -137,6 +137,22 @@
     "numbers": "cpp",
     "semaphore": "cpp",
     "stop_token": "cpp",
-    "cinttypes": "cpp"
+    "cinttypes": "cpp",
+    "core": "cpp",
+    "superlusupport": "cpp",
+    "*.evaluator": "cpp",
+    "*.traits": "cpp",
+    "adolcforward": "cpp",
+    "alignedvector3": "cpp",
+    "autodiff": "cpp",
+    "bvh": "cpp",
+    "eulerangles": "cpp",
+    "fft": "cpp",
+    "kroneckerproduct": "cpp",
+    "mprealsupport": "cpp",
+    "numericaldiff": "cpp",
+    "openglsupport": "cpp",
+    "specialfunctions": "cpp",
+    "splines": "cpp"
   }
 }
