--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -153,6 +153,7 @@
     "numericaldiff": "cpp",
     "openglsupport": "cpp",
     "specialfunctions": "cpp",
-    "splines": "cpp"
+    "splines": "cpp",
+    "svd": "cpp"
   }
 }
